--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs/Red_Team/v17/Browse.VC.db
+/.vs/Red_Team/v17/Browse.VC.opendb
+/.vs/Red_Team/v17/Browse.VC.opendb
+/.vs/Red_Team/v17/Browse.VC.db-shm
+*.db-wal
+*.db-shm
